# Introduction-To-PathTracing-2020

./: .clang-format  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  draw_multiple_sphere.cpp  draw_sphere_lambert.cpp  draw_sphere_normal.cpp  shoot_ray.cpp  simple_shadow.cpp  ssaa.cpp
mogumogu/: CMakeLists.txt
mogumogu/include/: vec.hpp
mogumogu/include/mogumogu/: film.hpp  intersect-info.hpp  ray.hpp  type.hpp  vec.hpp  vec3.hpp
mogumogu/include/mogumogu/accel/: accel.hpp  linear.hpp
mogumogu/include/mogumogu/camera/: camera.hpp  film.hpp  pinhole.hpp
mogumogu/include/mogumogu/core/: constant.hpp  intersect-info.hpp  primitive.hpp  ray.hpp  vec2.hpp  vec3.hpp
mogumogu/include/mogumogu/material/: lambert.hpp  material.hpp
mogumogu/include/mogumogu/sampler/: rng.hpp  sampler.hpp  uniform.hpp
mogumogu/include/mogumogu/shape/: plane.hpp  shape.hpp  sphere.hpp
mogumogu/src/: film.cpp
mogumogu/src/accel/: accel.cpp  linear.cpp
mogumogu/src/camera/: camera.cpp  film.cpp  pinhole.cpp
mogumogu/src/core/: primitive.cpp
mogumogu/src/material/: lambert.cpp
mogumogu/src/sampler/: rng.cpp  sampler.cpp  uniform.cpp
mogumogu/src/shape/: plane.cpp  sphere.cpp
mogumogu/tests/: CMakeLists.txt  vec.cpp  vec2.cpp  vec3.cpp
renderer/: CMakeLists.txt
renderer/include/: vec3.hpp
renderer/src/: vec3.cpp
